--- a/store/Templates/store/main.html
+++ b/store/Templates/store/main.html
@@ -63,7 +63,7 @@
 			<ul>
 				<li><a href=" {% static 'main.html' %} ">Home</a></li>
 				<li><a href=" {% static 'contact.html' %} ">Contact</a></li>
-				<li><a href="accounts/login">Login</a></li>
+				<li><a href="{% url 'login' %}">Login</a></li>
 
 				
 			</ul>
@@ -184,20 +184,53 @@
 		</div>
 	</div>
 
-	<!-- Destinations -->
+  <div class="row">
+    <div class="col"><
+      {% for car in cars %}
+      
+          <img class="thumbnail" src="{{car.imageURL|default:'/images/transparentLogo.png'}}">
+          <div class="box-element product">
+              <h6><strong>{{car.Year}} {{car.Make}} {{car.Model}}</strong></h6>
+              <hr>
+              <a class="btn btn-outline-success" href="{% url 'post_detail' car.pk %}">View</a>
+              <h4 style="display: inline-block; float: right"><strong>${{car.Price|floatformat:2}}</strong></h4>
+        {% endfor %}
+          </div>
+      </div>
+      
+  </div>
+    </div>
+  
+  
+  <nav aria-label="Page navigation">   <ul class="pagination">
+      {% if cars.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page=1" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">begin</span>
+        </a>
+      </li>   {% endif %}
+      
+      {% for n in cars.paginator.page_range %}
+        {% if cars.number == n %}
+          <li class="page-item active">
+            <span class="page-link">{{ n }}<span class="sr-only">(current)</span></span>
+          </li>
+        {% elif n > cars.number|add:'-3' and n < cars.number|add:'3' %}
+          <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+        {% endif %}
+      {% endfor %}
+      
+      {% if cars.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ cars_list.paginator.num_pages }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">end</span>
+          </a>
+        </li>
+        {% endif %}   </ul> </nav>
 
-	<div class="destinations" id="destinations">
-		<div class="container">
-			<div class="row">
-				<div class="col text-center">
-					
-					<div class="section_title"><h2>Used Vehicles</h2></div>
-					<div class="section_subtitle">For Sale Near You</div>
-				</div>
-			</div>
-			
-		</div>
-	</div>
+
 
 	
 
